<resources>
    <string name="app_name">Sapi advertiser</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>

    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>

    <string name="search_content">Search</string>
<<<<<<< HEAD
    <string name="face_content">Face</string>
    <string name="add_content">Add</string>
=======
    <string name="add_content">Add</string>
    <string name="face_content">Profil</string>
    <string name="settings_name">Add</string>
>>>>>>> 6a40c7a187ced543dc328c02870aacccf7baa8ed

    <string name="forgot_password">Forgot your password?</string>

    <string name="pr_first_name">First Name</string>
    <string name="pr_last_name">Last Name</string>
    <string name="pr_email">Email</string>
    <string name="pr_phone_number">Phone Number</string>
    <string name="pr_password">Password</string>
    <string name="pr_confirm_password">Confirm password</string>
</resources>
