<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:weightSum="2"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ll_background_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/sapientiaemte"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <TextView
                android:id="@+id/tv_name_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_image_profile"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/profileplaceholder"
                    android:layout_marginTop="70dp"
                    android:layout_marginStart="40dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorSapientia"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fb_logout_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="45dp"
                    android:src="@drawable/profile_logout"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center"
                    android:text="Logout"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fb_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/profile_edit"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center"
                    android:text="Edit/Save"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        >

        <EditText
            android:id="@+id/pr_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pr_first_name"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingLeft="12dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_green_rectangle_white_background"
            android:textColorHint="@color/colorGrey"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toTopOf="parent"
            android:minHeight="30dp"
            android:focusable="false"

            tools:ignore="Deprecated" />
        <EditText
            android:id="@+id/pr_last"
            app:layout_constraintTop_toBottomOf="@+id/pr_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pr_last_name"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingLeft="10dp"
            android:focusable="false"
            android:background="@drawable/border_green_rectangle_white_background"
            android:textColorHint="@color/colorGrey"
            android:textColor="@color/colorBlack"
            android:minHeight="30dp"
            />
        <EditText
            android:id="@+id/pr_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pr_email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/pr_last"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingStart="10dp"
            android:background="@drawable/border_green_rectangle_white_background"
            android:textColorHint="@color/colorGrey"
            android:textColor="@color/colorBlack"
            android:minHeight="30dp"
            android:focusable="false"
            />
        <EditText
            android:id="@+id/pr_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/pr_phone_number"
            app:layout_constraintTop_toBottomOf="@id/pr_email"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingStart="10dp"
            android:focusable="false"
            android:background="@drawable/border_green_rectangle_white_background"
            android:textColorHint="@color/colorGrey"
            android:textColor="@color/colorBlack"
            android:minHeight="30dp"
            />
        <EditText
            android:id="@+id/pr_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pr_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/pr_phone"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingStart="10dp"
            android:focusable="false"
            android:background="@drawable/border_green_rectangle_white_background"
            android:textColorHint="@color/colorGrey"
            android:textColor="@color/colorBlack"
            android:minHeight="30dp"
            />
        <EditText
            android:id="@+id/pr_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pr_confirm_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/pr_password"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingStart="10dp"
            android:focusable="false"
            android:background="@drawable/border_green_rectangle_white_background"
            android:textColorHint="@color/colorGrey"
            android:textColor="@color/colorBlack"
            android:minHeight="30dp"
            />

    </LinearLayout>
    </ScrollView>
</LinearLayout>





</android.support.constraint.ConstraintLayout>